fix: camera video not fitting

--- a/static/templates/scanner/style.css
+++ b/static/templates/scanner/style.css
@@ -17,3 +17,7 @@ h1, p {
     font-size: 2.5vh;
     margin-top: 20px
 }
+
+#video {
+    width: 95vw;
+}
